# lv2tutorial

./: .gitignore  CMakeLists.txt  Makefile
myAmp/: CMakeLists.txt  myAmp.c  myAmp.maxhelp  myAmp.ttl.in
mySineSynth/: CMakeLists.txt  mySineSynth.cpp  mySineSynth.maxhelp  mySineSynth.ttl.in
myTestTone/: CMakeLists.txt  myTestTone.cpp  myTestTone.maxhelp  myTestTone.ttl.in
